# telegram-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py  config.py  create_bot.py  keyboard.py  main.py
app/data/: __all_models.py  bot_user.py  db_session.py
app/handlers/: __init__.py  details.py  fight.py  garage.py  help_.py  music.py  response.py  ship.py  shop.py  start.py  store.py  upgrade.py  wallet.py
app/services/: all.py  api.py  api_response_example.py  db.py
app/settings/: config.py
app/templates/: combat.j2  detail_personal_page.j2  fight.j2  garage.j2  garage_info.j2  help.j2  name_error.j2  not_new_user.j2  opponent.j2  personal_page_buy.j2  ship.j2  ship_details.j2  shop.j2  start.j2  sucsess_start.j2  templates.py  upgrade.j2  wallet.j2
db/: db.sql
starship_bot/: __init__.py
