[tool.poetry]
name = "telegram-client"
version = "0.1.0"
description = "Client for starship game, telgram-bot"
authors = ["Alchemmist <anton.ingrish@gmail.com>", "Mark Meliksetyan <markmelix.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include="app"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.9"
aiogram = "^2.25.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
